--- a/page.html
+++ b/page.html
@@ -1,27 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
-        <script type="text/javascript" src="../jquery.js"></script>
-        <script type="text/javascript" src="../toolbar.js"></script>
-        <link rel='stylesheet' href='./styles/coToolbarPlaceholder.css' type='text/css' />
-        <link rel='stylesheet' href='./styles/coToolbarBaseChrome.css' type='text/css' />
-		<link rel='stylesheet' href='./styles/iddInfobarChrome.css' type='text/css' />
-		<link rel='stylesheet' href='./styles/iddInfobarShared.css' type='text/css' />
-    <head>
+		<meta charset="utf-8" />
+		<title>Fair to the Fan</title>
+	</head>
     <body>
-        <hidden id="coFrameIdentifier"></hidden>
-        <div id="coToolbarDiv">
-            <div class="coCloseButton" id="coCloseButton" >
-            <div></div>
-            </div>
-            <div class="coHideToolbarButton" id="coHideToolbarButton" title="Hide Toolbar for this page">
-            <div></div>
-            </div>
-            <div id="coDefaultLogo" title="Norton" class="conortonImage"></div>
-            <div id="coToolbarContent">
-            </div> <!-- #coToolbarContent -->
-        </div> <!-- #coToolbarDiv -->
-        <div id="coInfobarDiv">
-        </div> <!-- #coInfobarDiv -->
+		<p>Ticket Transactions </p>
 </body>
+	
 </html>
