--- a/page.html
+++ b/page.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
 		<title>Fair to the Fan</title>
-
-		<img src="logoFCB.png" alt="FC Bayern" width="128" height="128">
+		<link href="style.css" rel="stylesheet">
 	</head>
     <body bgcolor="#ebe9da" text="#2c1b38">
 		
 		<header>
-					<link href="style.css" rel="stylesheet">
+					<img src="logoFCB.png" alt="FC Bayern" width="128" height="128" style="margin:10px 10px">
+					<h1> Hello </h1>
+
 		<nav>
 			<ul>
 			
