--- a/page.html
+++ b/page.html
@@ -8,39 +8,25 @@
 		
 		<header>
 					<img src="logoFCB.png" alt="FC Bayern" width="128" height="128" style="margin:10px 10px">
-					<h1> Hello </h1>
-
-		<nav>
-			<ul>
-			
-				<li> <a href="#"> About </a></li>
-				<li> <a href="#"> Mission </a></li>
-				<li> <a href="#"> Purchase </a></li>
-				<li> <a href="#"> Contact </a></li>
-			
-			</ul>
-			</nav>
-		
+					<h1> Fair to the FAN! </h1>	
 		</header>
-		<table cellpadding="10" border="1">
-		<tr>
-			<td colspan="2"><h1>FAIR to the FAN</h1>
-			</td>
-			</tr>
-			<tr>
-				<td>
-				<h2>Menu Options</h2><br>
-				Sale my tickets<br>
-				Donate my tickets to Childrens<br>
-				Buy a ticket<br>
-				</td>
-				<td>
-				Welcom to: FAIR to the FAN!.
-				The transparent way of bayern Munich sale their tickets.
-				</td>
-			</tr>
+
+		<div class=main>
+    <div class=bttn>
+        <button>abcdef</div>
+    <div class=content>
+        <a href=#!>jksg</a>
+        <a href=#!>jksg</a>
+        <a href=#!>jksg</a>
+        <a href=#!>jksg</a>
+    </div>
+</div>
+
+<button>abcdef
+    <button>abcdef
+        <button>abcdef
+            </div>
 		
-		</table>
 </body>
 	
 </html>
