--- a/page.html
+++ b/page.html
@@ -1,32 +1,83 @@
 <!doctype html>
 <html lang="en">
+	
     <head>
 		<title>Fair to the Fan</title>
 		<link href="style.css" rel="stylesheet">
-	</head>
-    <body bgcolor="#ebe9da" text="#2c1b38">
-		
-		<header>
-					<img src="logoFCB.png" alt="FC Bayern" width="128" height="128" style="margin:10px 10px">
-					<h1> Fair to the FAN! </h1>	
-		</header>
+	</head>			
+	
+	<header>
+		<img src="logoFCB.png" alt="FC Bayern" width="128" height="128" style="margin:10px 10px">
+		<h1> Fairness for our FANS! </h1>
+	</header>
+    
+	<body>
+	<table>
+  <tr>
+    <th>Game</th>
+    <th>Date</th>
+    <th>FC Bayern</th>
+	<th>TicketMaster</th>
+    <th>Agent</th>
+  </tr>
+  <tr>
+    <td>first column</td>
+    <td><p>Sat, 27/01, 15:35</p></td>
+    <td><input type="radio" name="date1" value="sale1"></td>
+	<td><input type="radio" name="date1" value="sale1"></td>
+    <td><input type="radio" name="date1" value="sale1"></td>
+  </tr>
+  <tr>
+    <td>first column</td>
+    <td>second date</td>
+    <td><input type="radio" name="date2" value="sale1"></td>
+	<td><input type="radio" name="date2" value="sale1"></td>
+    <td><input type="radio" name="date2" value="sale1"></td>
+  </tr>
+  <tr>
+    <td>first column</td>
+    <td>third date</td>
+    <td><input type="radio" name="date3" value="sale1"></td>
+	<td><input type="radio" name="date3" value="sale1"></td>
+    <td><input type="radio" name="date3" value="sale1"></td>
+  </tr>
+  <tr>
+    <td>first column</td>
+    <td>second column</td>
+    <td><input type="radio" name="date4" value="sale1"></td>
+	<td><input type="radio" name="date4" value="sale1"></td>
+    <td><input type="radio" name="date4" value="sale1"></td>
+  </tr>
+  <tr>
+    <td>first column</td>
+    <td>second column</td>
+    <td><input type="radio" name="date5" value="sale1"></td>
+	<td><input type="radio" name="date5" value="sale1"></td>
+    <td><input type="radio" name="date5" value="sale1"></td>
+  </tr>
+  <tr>
+    <td>first column</td>
+    <td>second column</td>
+    <td><input type="radio" name="date6" value="sale1"></td>
+	<td><input type="radio" name="date6" value="sale1"></td>
+    <td><input type="radio" name="date6" value="sale1"></td>
+  </tr>
+  <tr>
+    <td>first column</td>
+    <td>second column</td>
+    <td><input type="radio" name="date7" value="sale1"></td>
+	<td><input type="radio" name="date7" value="sale1"></td>
+    <td><input type="radio" name="date7" value="sale1"></td>
+  </tr>
+  <tr>
+    <td>first column</td>
+    <td>second column</td>
+    <td><input type="radio" name="date8" value="sale1"></td>
+	<td><input type="radio" name="date8" value="sale1"></td>
+    <td><input type="radio" name="date8" value="sale1"></td>
+  </tr>
+</table>
 
-		<div class=main>
-    <div class=bttn>
-        <button>abcdef</div>
-    <div class=content>
-        <a href=#!>jksg</a>
-        <a href=#!>jksg</a>
-        <a href=#!>jksg</a>
-        <a href=#!>jksg</a>
-    </div>
-</div>
-
-<button>abcdef
-    <button>abcdef
-        <button>abcdef
-            </div>
-		
-</body>
+	</body>
 	
 </html>
