--- a/page.html
+++ b/page.html
@@ -14,64 +14,98 @@
 	<body>
 	<table>
   <tr>
-    <th>Game</th>
+    <th>Bundesliga Games</th>
     <th>Date</th>
     <th>FC Bayern</th>
 	<th>TicketMaster</th>
-    <th>Agent</th>
+    <th>Pot</th>
   </tr>
   <tr>
-    <td>first column</td>
+    <td>
+		<div>
+  			<img class="img-valign" src="bayern.png" width="40" height="40"/>
+  			<span class="text1">Versus</span>
+  			<img class="img-valign" src="Hoffenheim.png" width="40" height="40"/>
+		</div>
+	  </td>
     <td><p>Sat, 27/01, 15:35</p></td>
     <td><input type="radio" name="date1" value="sale1"></td>
 	<td><input type="radio" name="date1" value="sale1"></td>
     <td><input type="radio" name="date1" value="sale1"></td>
   </tr>
   <tr>
-    <td>first column</td>
-    <td>second date</td>
+    <td>
+  			<img class="img-valign" src="mainz.png" width="40" height="40"/>
+  			<span class="text1">Versus</span>
+  			<img class="img-valign" src="bayern.png" width="40" height="40"/>
+	</td>
+    <td>Sat, 03/02, 15:30</td>
     <td><input type="radio" name="date2" value="sale1"></td>
 	<td><input type="radio" name="date2" value="sale1"></td>
     <td><input type="radio" name="date2" value="sale1"></td>
   </tr>
   <tr>
-    <td>first column</td>
-    <td>third date</td>
+        <td>
+  			<img class="img-valign" src="bayern.png" width="40" height="40"/>
+  			<span class="text1">Versus</span>
+  			<img class="img-valign" src="schalke04.png" width="40" height="40"/>
+	</td>
+    <td>Sat, 10/02, 18:30</td>
     <td><input type="radio" name="date3" value="sale1"></td>
 	<td><input type="radio" name="date3" value="sale1"></td>
     <td><input type="radio" name="date3" value="sale1"></td>
   </tr>
   <tr>
-    <td>first column</td>
-    <td>second column</td>
+        <td>
+  			<img class="img-valign" src="wolfsburg.png" width="40" height="40"/>
+  			<span class="text1">Versus</span>
+  			<img class="img-valign" src="bayern.png" width="40" height="40"/>
+	</td>
+    <td>Sat, 17/02, 15:30</td>
     <td><input type="radio" name="date4" value="sale1"></td>
 	<td><input type="radio" name="date4" value="sale1"></td>
     <td><input type="radio" name="date4" value="sale1"></td>
   </tr>
   <tr>
-    <td>first column</td>
-    <td>second column</td>
+        <td>
+  			<img class="img-valign" src="bayern.png" width="40" height="40"/>
+  			<span class="text1">Versus</span>
+  			<img class="img-valign" src="hertha.png" width="40" height="40"/>
+	</td>
+    <td>Sat, 24/02, 15:30</td>
     <td><input type="radio" name="date5" value="sale1"></td>
 	<td><input type="radio" name="date5" value="sale1"></td>
     <td><input type="radio" name="date5" value="sale1"></td>
   </tr>
   <tr>
-    <td>first column</td>
-    <td>second column</td>
+        <td>
+  			<img class="img-valign" src="scfreiburg.png" width="40" height="40"/>
+  			<span class="text1">Versus</span>
+  			<img class="img-valign" src="bayern.png" width="40" height="40"/>
+	</td>
+    <td>Sun, 04/03, 18:00</td>
     <td><input type="radio" name="date6" value="sale1"></td>
 	<td><input type="radio" name="date6" value="sale1"></td>
     <td><input type="radio" name="date6" value="sale1"></td>
   </tr>
   <tr>
-    <td>first column</td>
-    <td>second column</td>
+        <td>
+  			<img class="img-valign" src="rbleipzig.png" width="40" height="40"/>
+  			<span class="text1">Versus</span>
+  			<img class="img-valign" src="bayern.png" width="40" height="40"/>
+	</td>
+    <td>Sun, 18/03, 18:00</td>
     <td><input type="radio" name="date7" value="sale1"></td>
 	<td><input type="radio" name="date7" value="sale1"></td>
     <td><input type="radio" name="date7" value="sale1"></td>
   </tr>
   <tr>
-    <td>first column</td>
-    <td>second column</td>
+        <td>
+  			<img class="img-valign" src="bayern.png" width="40" height="40"/>
+  			<span class="text1">Versus</span>
+  			<img class="img-valign" src="dortmund.png" width="40" height="40"/>
+	</td>
+    <td>Sun, 18/03, 18:00</td>
     <td><input type="radio" name="date8" value="sale1"></td>
 	<td><input type="radio" name="date8" value="sale1"></td>
     <td><input type="radio" name="date8" value="sale1"></td>
