--- a/page.html
+++ b/page.html
@@ -6,12 +6,19 @@
 		<link href="style.css" rel="stylesheet">
 	</head>			
 	
-	<header>
-		<img src="logoFCB.png" alt="FC Bayern" width="128" height="128" style="margin:10px 10px">
-		<h1> Fairness for our FANS! </h1>
-	</header>
+
     
 	<body>
+	
+	<header>
+		
+		<div >
+		<img src="logoFCB.png" alt="FC Bayern" width="128" height="128" style="margin:10px 10px">
+		<h1 style="vertical-align: middle"> Fairness for our FANS! </h1>
+		</div>
+		
+	</header>
+		
 	<table>
   <tr>
     <th>Bundesliga Games</th>
@@ -24,7 +31,7 @@
     <td>
 		<div>
   			<img class="img-valign" src="bayern.png" width="40" height="40"/>
-  			<span class="text1">Versus</span>
+  			<span class="text1">Vs.</span>
   			<img class="img-valign" src="Hoffenheim.png" width="40" height="40"/>
 		</div>
 	  </td>
@@ -36,7 +43,7 @@
   <tr>
     <td>
   			<img class="img-valign" src="mainz.png" width="40" height="40"/>
-  			<span class="text1">Versus</span>
+  			<span class="text1">Vs.</span>
   			<img class="img-valign" src="bayern.png" width="40" height="40"/>
 	</td>
     <td>Sat, 03/02, 15:30</td>
@@ -47,7 +54,7 @@
   <tr>
         <td>
   			<img class="img-valign" src="bayern.png" width="40" height="40"/>
-  			<span class="text1">Versus</span>
+  			<span class="text1">Vs.</span>
   			<img class="img-valign" src="schalke04.png" width="40" height="40"/>
 	</td>
     <td>Sat, 10/02, 18:30</td>
@@ -58,7 +65,7 @@
   <tr>
         <td>
   			<img class="img-valign" src="wolfsburg.png" width="40" height="40"/>
-  			<span class="text1">Versus</span>
+  			<span class="text1">Vs.</span>
   			<img class="img-valign" src="bayern.png" width="40" height="40"/>
 	</td>
     <td>Sat, 17/02, 15:30</td>
@@ -69,7 +76,7 @@
   <tr>
         <td>
   			<img class="img-valign" src="bayern.png" width="40" height="40"/>
-  			<span class="text1">Versus</span>
+  			<span class="text1">Vs.</span>
   			<img class="img-valign" src="hertha.png" width="40" height="40"/>
 	</td>
     <td>Sat, 24/02, 15:30</td>
@@ -80,7 +87,7 @@
   <tr>
         <td>
   			<img class="img-valign" src="scfreiburg.png" width="40" height="40"/>
-  			<span class="text1">Versus</span>
+  			<span class="text1">Vs.</span>
   			<img class="img-valign" src="bayern.png" width="40" height="40"/>
 	</td>
     <td>Sun, 04/03, 18:00</td>
@@ -91,7 +98,7 @@
   <tr>
         <td>
   			<img class="img-valign" src="rbleipzig.png" width="40" height="40"/>
-  			<span class="text1">Versus</span>
+  			<span class="text1">Vs.</span>
   			<img class="img-valign" src="bayern.png" width="40" height="40"/>
 	</td>
     <td>Sun, 18/03, 18:00</td>
@@ -102,7 +109,7 @@
   <tr>
         <td>
   			<img class="img-valign" src="bayern.png" width="40" height="40"/>
-  			<span class="text1">Versus</span>
+  			<span class="text1">Vs.</span>
   			<img class="img-valign" src="dortmund.png" width="40" height="40"/>
 	</td>
     <td>Sun, 18/03, 18:00</td>
