update finish html?

--- a/page.html
+++ b/page.html
@@ -11,12 +11,12 @@
 	<body>
 	
 	<header>
-		
-		<div >
-		<img src="logoFCB.png" alt="FC Bayern" width="128" height="128" style="margin:10px 10px">
-		<h1 style="vertical-align: middle"> Fairness for our FANS! </h1>
-		</div>
-		
+		<table>
+			<tr>
+		<th><img style="margin:0px auto;display:block" src="logoFCB.png" alt="FC Bayern" width="128" height="128"></th>
+		<th>	<h1 > Fairness for our FANS! </h1> </th>
+				</tr>
+		</table>
 	</header>
 		
 	<table>
